--- a/client/pages/problem/problem.wxml
+++ b/client/pages/problem/problem.wxml
@@ -1,11 +1,38 @@
-<view class="index">
-    <button class='btn1'  bindtap='onProblem'>
-      <view>16级期末算法上机</view>
-    </button>
-    <button class='btn1' bindtap='onSolve'>
-      <view>17级期末数据结构上机</view>
-    </button>
-    <button class='btn1'  bindtap='onAnalyse'>
-      <view>18级期末程序设计上机</view>
-    </button>
-  </view>
+<view class="weui-cells weui-cells_after-title">
+  <view class="page__bd">
+    <view class="weui-panel weui-panel_access">
+      <view class="page__bd">
+        <form bindsubmit='formSubmit'>
+          <view class="weui-search-bar">
+            <view class="weui-search-bar__form">
+              <view class="weui-search-bar__box">
+                  <icon class="weui-icon-search_in-box" type="search" size="14"></icon>
+                  <input type="text" class="weui-search-bar__input" placeholder="请输入题号" value="{{inputVal}}" focus="{{inputShowed}}" bindinput="inputTyping"  name="condition"/>
+                  <view class="weui-icon-clear" wx:if="{{inputVal.length > 0}}" bindtap="clearInput">
+                      <icon type="clear" size="14"></icon>
+                  </view>
+              </view>
+              <label class="weui-search-bar__label" hidden="{{inputShowed}}" bindtap="showInput">
+                  <icon class="weui-icon-search" type="search" size="14"></icon>
+                  <view class="weui-search-bar__text">请输入姓名或学号</view>
+              </label>
+            </view>
+            <button formType="submit" class="weui-search-bar__cancel-btn" hidden="{{!inputShowed}}">搜索</button>
+            <view class="weui-search-bar__cancel-btn" hidden="{{!inputShowed}}" bindtap="hideInput">取消</view>
+        </view>
+        </form>
+         </view>
+            <view class="weui-cells weui-cells_after-title" wx:for="{{student}}">
+                <navigator url="../imgxg/imgxg?id={{item.id}}&no={{item.no}}&name={{item.name}}" class="weui-media-box weui-media-box_appmsg" hover-class="weui-cell_active">
+                    <view class="weui-media-box__hd weui-media-box__hd_in-appmsg">
+                        <image class="weui-media-box__thumb" src="{{item.path}}" />
+                    </view>
+                    <view class="weui-media-box__bd weui-media-box__bd_in-appmsg">
+                        <view class="weui-media-box__title">{{item.no}}</view>
+                        <view class="weui-media-box__desc">{{item.id}}  {{item.name}} {{item.sex}} {{item.age}}</view>
+                    </view>
+                </navigator>
+            </view>
+        </view>
+    </view>
+</view>
